# tempracatao

./: Dockerfile  Makefile  README.md  azure-pipelines.yml  package.json  pyproject.toml  setup.cfg  sonar-project.properties
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: fortify.yml
azure-pipelines/: ci.yml
src/: manage.py  pytest.ini
src/tempracatao/: asgi.py  urls.py  wsgi.py
src/tempracatao/healthcheck/: serializers.py  urls.py  views.py
src/tempracatao/healthcheck/tests/: test_views.py
src/tempracatao/helpers/database/tests/: test_enum_database_mixin.py
src/tempracatao/helpers/drf/tests/: test_views.py
src/tempracatao/index/: views.py
src/tempracatao/settings/: base.py
